--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Mon Mar 19 10:44:25 CET 2007 Daniel Veillard <veillard@redhat.com>
+
+	* src/virsh.c: patch from Masayuki Sunou, checking that byte
+	  values passed to virsh memory commands are positive.
+
 Fri Mar 16 20:30:20 CET 2007 Daniel Veillard <veillard@redhat.com>
 
 	* NEWS libvirt.spec.in docs/libvir.html docs/news.html: preparing
