--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Mon Mar 19 15:19:06 CET 2007 Daniel Veillard <veillard@redhat.com>
+
+	* src/virsh.c: applied patch from Jim Meyering to add printf-style
+	  function checking in virsh.c and fix one warning raised
+
 Mon Mar 19 15:15:51 CET 2007 Daniel Veillard <veillard@redhat.com>
 
 	* qemud/protocol.h src/internal.h: applied patch from Jim Meyering
