--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Tue Mar 20 16:30:29 CET 2007 Daniel Veillard <veillard@redhat.com>
+
+	* src/xen_internal.c: applied patch from Atsushi SAKAI fixing 
+	  direct hypervisor calls on some recent Xen versions
+
 Tue Mar 20 15:58:10 CET 2007 Daniel Veillard <veillard@redhat.com>
 
 	* libvirt.spec.in: missing /etc/libvirt/qemu/networks/autostart
