--- a/NEWS
+++ b/NEWS
@@ -8,11 +8,22 @@ Releases
 0.2.1: Mar 16 2007:
    - Various internal cleanups (Richard Jones,Daniel Berrange,Mark McLoughlin)
    - Bug fixes: libvirt_qemud daemon path (Daniel Berrange), libvirt
-      config directory (Daniel Berrange and Mark McLoughlin), memory leak in qemud (Mark), various fixes on network support (Mark), avoid Xen domain zombies on device hotplug errors (Daniel Berrange), various fixes on qemud (Mark), 
-    argsparsing (Richard Jones), virsh -t argument (Saori Fukuta), avoid virsh
-    crash on TAB key (Daniel Berrange), detect xend operation failures (Kazuki Mizushima), don't listen on null socket (Rich Jones), read-only socket cleanup (Rich Jones), use of vnc port 5900 (Nobuhiro Itou), assorted networking fixes
-(Daniel Berrange), shutoff and shutdown mismatches (Kazuki Mizushima), unlimited memory handling (Atsushi SAKAI), python binding fixes (Tatsuro Enokura)
-   - Build and portability fixes: IA64 fixes (Atsushi SAKAI), dependancies and build (Daniel Berrange), fix xend port detection (Daniel Berrange), icompile time warnings (Mark), avoid const related compiler warnings (Daniel Berrange), automated builds (Daniel Berrange), pointer/int mismatch (Richard Jones), configure time selection of drivers, libvirt spec hacking (Daniel Berrange)
+      config directory (Daniel Berrange and Mark McLoughlin), memory leak
+      in qemud (Mark), various fixes on network support (Mark), avoid Xen
+      domain zombies on device hotplug errors (Daniel Berrange), various
+      fixes on qemud (Mark), args parsing (Richard Jones), virsh -t argument
+      (Saori Fukuta), avoid virsh crash on TAB key (Daniel Berrange), detect
+      xend operation failures (Kazuki Mizushima), don't listen on null socket
+      (Rich Jones), read-only socket cleanup (Rich Jones), use of vnc port 5900
+      (Nobuhiro Itou), assorted networking fixes (Daniel Berrange), shutoff and
+      shutdown mismatches (Kazuki Mizushima), unlimited memory handling
+      (Atsushi SAKAI), python binding fixes (Tatsuro Enokura)
+   - Build and portability fixes: IA64 fixes (Atsushi SAKAI), dependancies
+      and build (Daniel Berrange), fix xend port detection (Daniel
+      Berrange), icompile time warnings (Mark), avoid const related
+      compiler warnings (Daniel Berrange), automated builds (Daniel
+      Berrange), pointer/int mismatch (Richard Jones), configure time
+      selection of drivers, libvirt spec hacking (Daniel Berrange)
    - Add support for network autostart and init scripts (Mark McLoughlin)
    - New API virConnectGetCapabilities() to detect the virtualization 
     capabilities of a host (Richard Jones)
@@ -27,14 +38,14 @@ Releases
 
 
 0.2.0: Feb 14 2007:
-   - Various internal cleanups (Mark McLoughlin, Richard Jones,Daniel
-    Berrange, Karel Zak)
-   - Bug fixes: avoid a crash in connect (Daniel Berrange), virsh
-    argsparsing (Richard Jones)
+   - Various internal cleanups (Mark McLoughlin, Richard Jones,
+      Daniel Berrange, Karel Zak)
+   - Bug fixes: avoid a crash in connect (Daniel Berrange), virsh args
+      parsing (Richard Jones)
    - Add support for QEmu and KVM virtualization (Daniel Berrange)
    - Add support for network configuration (Mark McLoughlin)
-   - Minor improvements: regression testing (Daniel Berrange),localization
-    string updates
+   - Minor improvements: regression testing (Daniel Berrange), 
+      localization string updates
 
 
 0.1.11: Jan 22 2007:
@@ -46,18 +57,12 @@ Releases
 
 0.1.10: Dec 20 2006:
    - more localizations
-   - bug fixes: VCPU info breakages on xen 3.0.3, xenDaemonListDomains
-    buffer overflow (Daniel Berrange), reference count bug when creating Xen
-    domains (Daniel Berrange).
-   - improvements: support graphic framebuffer for Xen paravirt (Daniel
-    Berrange), VNC listen IP range support (Daniel Berrange), support for
-    default Xen config files and inactive domains of 3.0.4 (Daniel
-  Berrange).
+   - bug fixes: VCPU info breakages on xen 3.0.3, xenDaemonListDomains buffer overflow (Daniel Berrange), reference count bug when creating Xen domains (Daniel Berrange).
+   - improvements: support graphic framebuffer for Xen paravirt (Daniel Berrange), VNC listen IP range support (Daniel Berrange), support for default Xen config files and inactive domains of 3.0.4 (Daniel Berrange).
 
 
 0.1.9: Nov 29 2006:
-   - python bindings: release interpeter lock when calling C (Daniel
-    Berrange)
+   - python bindings: release interpeter lock when calling C (Daniel Berrange)
    - don't raise HTTP error when looking informations for a domain
    - some refactoring to use the driver for all entry points
    - better error reporting (Daniel Berrange)
@@ -65,20 +70,15 @@ Releases
    - provide XML parsing errors
    - extension of the test framework (Daniel Berrange)
    - fix the reconnect regression test
-   - python bindings: Domain instances now link to the Connect to avoid
-    garbage collection and disconnect
-   - separate the notion of maximum memory and current use at the XML
-  level
+   - python bindings: Domain instances now link to the Connect to avoid garbage collection and disconnect
+   - separate the notion of maximum memory and current use at the XML level
    - Fix a memory leak (Daniel Berrange)
    - add support for shareable drives
-   - add support for non-bridge style networking configs for guests(Daniel
-    Berrange)
+   - add support for non-bridge style networking configs for guests(Daniel Berrange)
    - python bindings: fix unsigned long marshalling (Daniel Berrange)
-   - new config APIs virConfNew() and virConfSetValue() to build configs
-    from scratch
+   - new config APIs virConfNew() and virConfSetValue() to build configs from scratch
    - hot plug device support based on Michel Ponceau patch
-   - added support for inactive domains, new APIs, various associated
-    cleanup (Daniel Berrange)
+   - added support for inactive domains, new APIs, various associated cleanup (Daniel Berrange)
    - special device model for HVM guests (Daniel Berrange)
    - add API to dump core of domains (but requires a patched xend)
    - pygrub bootloader informations take over <os> informations
@@ -86,78 +86,72 @@ Releases
 
 
 0.1.8: Oct 16 2006:
-   - Bug for system with page size != 4k
-   - vcpu number initialization (Philippe Berthault)
-   - don't label crashed domains as shut off (Peter Vetere)
-   - fix virsh man page (Noriko Mizumoto)
-   - blktapdd support for alternate drivers like blktap (Daniel
-  Berrange)
-   - memory leak fixes (xend interface and XML parsing) (Daniel
-  Berrange)
-   - compile fix
-   - mlock/munlock size fixes (Daniel Berrange)
-   - improve error reporting
+   -  Bug for system with page size != 4k
+   -  vcpu number initialization (Philippe Berthault)
+   -  don't label crashed domains as shut off (Peter Vetere)
+   -  fix virsh man page (Noriko Mizumoto)
+   -  blktapdd support for alternate drivers like blktap (Daniel Berrange)
+   -  memory leak fixes (xend interface and XML parsing) (Daniel Berrange)
+   -  compile fix
+   -  mlock/munlock size fixes (Daniel Berrange)
+   -  improve error reporting
 
 
 0.1.7: Sep 29 2006:
-   - fix a memory bug on getting vcpu informations from xend (Daniel
-    Berrange)
-   - fix another problem in the hypercalls change in Xen
-    changeset86d26e6ec89b when getting domain informations (Daniel
-  Berrange)
+   -  fix a memory bug on getting vcpu informations from xend (Daniel Berrange)
+   -  fix another problem in the hypercalls change in Xen changeset
+       86d26e6ec89b when getting domain informations (Daniel Berrange)
 
 
 0.1.6: Sep 22 2006:
    - Support for localization of strings using gettext (Daniel Berrange)
-   - Support for new Xen-3.0.3 cdrom and disk configuration (Daniel
-  Berrange)
-   - Support for setting VNC port when creating domains with newxend config
-    files (Daniel Berrange)
+   - Support for new Xen-3.0.3 cdrom and disk configuration (Daniel Berrange)
+   - Support for setting VNC port when creating domains with new
+      xend config files (Daniel Berrange) 
    - Fix bug when running against xen-3.0.2 hypercalls (Jim Fehlig)
    - Fix reconnection problem when talking directly to http xend
 
 
 0.1.5: Sep 5 2006:
    - Support for new hypercalls change in Xen changeset 86d26e6ec89b
-   - bug fixes: virParseUUID() was wrong, netwoking for paravirt
-    guestsi(Daniel Berrange), virsh on non-existent domains (Daniel
-    Berrange),string cast bug when handling error in python (Pete Vetere),
-    HTTP500 xend error code handling (Pete Vetere and Daniel Berrange)
-   - improvements: test suite for SEXPR <-> XML format conversions
-    (DanielBerrange), virsh output regression suite (Daniel Berrange), new
-    environvariable VIRSH_DEFAULT_CONNECT_URI for the default URI when
-    connecting(Daniel Berrange), graphical console support for paravirt
-    guests(Jeremy Katz), parsing of simple Xen config files (with Daniel
-    Berrange),early work on defined (not running) domains (Daniel
-    Berrange),virsh output improvement (Daniel Berrange
+   - bug fixes: virParseUUID() was wrong, netwoking for paravirt guestsi
+      (Daniel Berrange), virsh on non-existent domains (Daniel Berrange),
+      string cast bug when handling error in python (Pete Vetere), HTTP
+      500 xend error code handling (Pete Vetere and Daniel Berrange)
+   - improvements: test suite for SEXPR <-> XML format conversions (Daniel
+      Berrange), virsh output regression suite (Daniel Berrange), new environ
+      variable VIRSH_DEFAULT_CONNECT_URI for the default URI when connecting
+      (Daniel Berrange), graphical console support for paravirt guests
+      (Jeremy Katz), parsing of simple Xen config files (with Daniel Berrange),
+      early work on defined (not running) domains (Daniel Berrange),
+      virsh output improvement (Daniel Berrange
 
 
 0.1.4: Aug 16 2006:
-   - bug fixes: spec file fix (Mark McLoughlin), error report problem
-    (withHugh Brock), long integer in Python bindings (with Daniel Berrange),
-    XMLgeneration bug for CDRom (Daniel Berrange), bug whem using number()
-    XPathfunction (Mark McLoughlin), fix python detection code, remove
-    duplicateinitialization errors (Daniel Berrange)
-   - improvements: UUID in XML description (Peter Vetere), proxy
-    codecleanup, virtual CPU and affinity support + virsh support
-    (MichelPonceau, Philippe Berthault, Daniel Berrange), port and tty
-    informationsfor console in XML (Daniel Berrange), added XML dump to
-    driver and proxysupport (Daniel Berrange), extention of boot options with
-    support forfloppy and cdrom (Daniel Berrange), features block in XML to
-    report/askPAE, ACPI, APIC for HVM domains (Daniel Berrange), fail
-    saide-effectoperations when using read-only connection, large
-    improvements to testdriver (Daniel Berrange)
+   - bug fixes: spec file fix (Mark McLoughlin), error report problem (with
+    Hugh Brock), long integer in Python bindings (with Daniel Berrange), XML
+    generation bug for CDRom (Daniel Berrange), bug whem using number() XPath
+    function (Mark McLoughlin), fix python detection code, remove duplicate
+    initialization errors (Daniel Berrange)
+   - improvements: UUID in XML description (Peter Vetere), proxy code
+    cleanup, virtual CPU and affinity support + virsh support (Michel
+    Ponceau, Philippe Berthault, Daniel Berrange), port and tty informations
+    for console in XML (Daniel Berrange), added XML dump to driver and proxy
+    support (Daniel Berrange), extention of boot options with support for
+    floppy and cdrom (Daniel Berrange), features block in XML to report/ask
+    PAE, ACPI, APIC for HVM domains (Daniel Berrange), fail saide-effect
+    operations when using read-only connection, large improvements to test
+    driver (Daniel Berrange) 
    - documentation: spelling (Daniel Berrange), test driver examples.
 
 
 0.1.3: Jul 11 2006:
-   - bugfixes: build as non-root, fix xend access when root, handling
-    ofempty XML elements (Mark McLoughlin), XML serialization and parsing
-    fixes(Mark McLoughlin), allow to create domains without disk
-    (MarkMcLoughlin),
-   - improvement: xenDaemonLookupByID from O(n^2) to O(n) (Daniel
-    Berrange),support for fully virtualized guest (Jim Fehlig, DV, Mark
-    McLoughlin)
+   - bugfixes: build as non-root, fix xend access when root, handling of
+    empty XML elements (Mark McLoughlin), XML serialization and parsing fixes
+    (Mark McLoughlin), allow to create domains without disk (Mark
+  McLoughlin),
+   - improvement: xenDaemonLookupByID from O(n^2) to O(n) (Daniel Berrange),
+    support for fully virtualized guest (Jim Fehlig, DV, Mark McLoughlin)
    - documentation: augmented to cover hvm domains
 
 
@@ -167,57 +161,57 @@ Releases
 
 
 0.1.1: Jun 21 2006:
-   - building fixes: ncurses fallback (Jim Fehlig), VPATH builds (Daniel
-    P.Berrange)
-   - driver cleanups: new entry points, cleanup of libvirt.c (with Daniel
-    P.Berrange)
+   - building fixes: ncurses fallback (Jim Fehlig), VPATH builds (Daniel P.
+    Berrange)
+   - driver cleanups: new entry points, cleanup of libvirt.c (with Daniel P.
+    Berrange)
    - Cope with API change introduced in Xen changeset 10277
    - new test driver for regression checks (Daniel P. Berrange)
-   - improvements: added UUID to XML serialization, buffer usage (KarelZak),
-    --connect argument to virsh (Daniel P. Berrange),
-   - bug fixes: uninitialized memory access in error reporting,
-    S-Exprparsing (Jim Fehlig, Jeremy Katz), virConnectOpen bug, remove a
-    TODO inxs_internal.c
-   - documentation: Python examples (David Lutterkort), new Perl bindingURL,
-    man page update (Karel Zak)
+   - improvements: added UUID to XML serialization, buffer usage (Karel
+    Zak), --connect argument to virsh (Daniel P. Berrange),
+   - bug fixes: uninitialized memory access in error reporting, S-Expr
+    parsing (Jim Fehlig, Jeremy Katz), virConnectOpen bug, remove a TODO in
+    xs_internal.c
+   - documentation: Python examples (David Lutterkort), new Perl binding
+    URL, man page update (Karel Zak)
 
 
 0.1.0: Apr 10 2006:
-   - building fixes: --with-xen-distdir option (Ronald Aigner), out of
-    treebuild and pkginfo cflag fix (Daniel Berrange)
-   - enhancement and fixes of the XML description format (David
-    Lutterkortand Jim Fehlig)
+   - building fixes: --with-xen-distdir option (Ronald Aigner), out of tree
+    build and pkginfo cflag fix (Daniel Berrange)
+   - enhancement and fixes of the XML description format (David Lutterkort
+    and Jim Fehlig)
    - new APIs: for Node information and Reboot
-   - internal code cleanup: refactoring internals into a driver model,
-    moreerror handling, structure sharing, thread safety and ref counting
-   - bug fixes: error message (Jim Meyering), error allocation in virsh
-    (JimMeyering), virDomainLookupByID (Jim Fehlig),
-   - documentation: updates on architecture, and format, typo fix
-    (JimMeyering)
-   - bindings: exception handling in examples (Jim Meyering), perl ones
-    outof tree (Daniel Berrange)
-   - virsh: more options, create, nodeinfo (Karel Zak), renaming of
-    someoptions (Karel Zak), use stderr only for errors (Karel Zak), man
-    page(Andrew Puch)
+   - internal code cleanup: refactoring internals into a driver model, more
+    error handling, structure sharing, thread safety and ref counting
+   - bug fixes: error message (Jim Meyering), error allocation in virsh (Jim
+    Meyering), virDomainLookupByID (Jim Fehlig),
+   - documentation: updates on architecture, and format, typo fix (Jim
+    Meyering)
+   - bindings: exception handling in examples (Jim Meyering), perl ones out
+    of tree (Daniel Berrange)
+   - virsh: more options, create, nodeinfo (Karel Zak), renaming of some
+    options (Karel Zak), use stderr only for errors (Karel Zak), man page
+    (Andrew Puch)
 
 
 0.0.6: Feb 28 2006:
    - add UUID lookup and extract API
    - add error handling APIs both synchronous and asynchronous
-   - added minimal hook for error handling at the python level, improved
-    thepython bindings
+   - added minimal hook for error handling at the python level, improved the
+    python bindings
    - augment the documentation and tests to cover error handling
 
 
 0.0.5: Feb 23 2006:
-   - Added XML description parsing, dependance to libxml2, implemented
-    thecreation API virDomainCreateLinux()
+   - Added XML description parsing, dependance to libxml2, implemented the
+    creation API virDomainCreateLinux()
    - new APIs to lookup and name domain by UUID
    - fixed the XML dump when using the Xend access
    - Fixed a few more problem related to the name change
    - Adding regression tests in python and examples in C
-   - web site improvement, extended the documentation to cover the XMLformat
-    and Python API
+   - web site improvement, extended the documentation to cover the XML
+    format and Python API
    - Added devhelp help for Gnome/Gtk programmers
 
 
@@ -233,8 +227,8 @@ Releases
 
 0.0.2: Jan 29 2006:
    - Update of the documentation, web site redesign (Diana Fong)
-   - integration of HTTP xend RPC based on libxend by Anthony Liquori
-    formost operations
+   - integration of HTTP xend RPC based on libxend by Anthony Liquori for
+    most operations
    - Adding Save and Restore APIs
    - extended the virsh command line tool (Karel Zak)
    - remove xenstore transactions (Anthony Liguori)
