--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+Tue Mar 27 10:39:00 EDT 2007 Daniel P. Berrange <berrange@redhat.com>
+
+	* src/xen_internal.c: Fix handling of PAE flags in capabilities XML
+	generation & merge duplicate (arch,os-type) entries.
+	* tests/xencapstest.c: Added a test suite for various Xen capabilities
+	data sets
+	* tests/xencapsdata/*: Added data files for Xen capabilities tests
+	* configure.ac, tests/Makefile.am: Added tests/xencapsdata/ directory
+
 Tue Mar 27 11:26:00 BST 2007 Richard W.M. Jones <rjones@redhat.com>
 
 	* qemud/qemud.c: If using FORTIFY_SOURCE, remove warning
