* src/virsh.c: applied patch from Atsushi SAKAI to clarify   that memory values are in kilobytes Daniel

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Mon Apr  2 13:54:17 CEST 2007 Daniel Veillard <veillard@redhat.com>
+
+	* src/virsh.c: applied patch from Atsushi SAKAI to clarify
+	  that memory values are in kilobytes
+
 Wed Mar 30 17:25:33 IST 2007 Mark McLoughlin <markmc@redhat.com>
 
 	* qemud/iptables.c: As suggested by danpb, make libvirt_qemud
