--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Tue Apr 10 20:39:29 CEST 2007 Daniel Veillard <veillard@redhat.com>
+
+	* src/virsh.c: fixed some typos reported by translator
+	  Nikolay Sivov should fix #235904
+
 Tue Apr 10 13:58:00 BST 2007 Richard W.M. Jones  <rjones@redhat.com>
 
 	* src/xen_unified.c (xenUnifiedRegister): Comment the
