--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+Wed Apr 11 18:04:00 CEST 2007 Daniel Veillard <veillard@redhat.com>
+
+	* src/xend_internal.c src/xml.c: applied patch from Nobuhiro Itou
+	  to handle CDRom devices with no device name
+	* tests/sexpr2xmltest.c tests/xml2sexprtest.c
+	  tests/sexpr2xmldata/sexpr2xml-no-source-cdrom.sexpr
+	  tests/sexpr2xmldata/sexpr2xml-no-source-cdrom.xml
+	  tests/xml2sexprdata/xml2sexpr-no-source-cdrom.sexpr
+	  tests/xml2sexprdata/xml2sexpr-no-source-cdrom.xml: added regression
+	  tests for this case based on Nobuhiro Itou test inputs.
+
 Tue Apr 10 19:17:29 EST 2007 Daniel P. Berrange <berrange@redhat.com>
 
 	* qemud/conf.c, qemu/internal.h, qemud/iptables.c, qemud/iptables.h,
