--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,24 @@
+Thu Apr 12 19:51:00 EST 2007 Daniel Berrange <berrange@redhat.com>
+
+	* src/xen_internal.c: Updated structs to work with new Xen 3.0.5
+	hypercall ABI. Mask out HVM bit when determining domain status.
+	Limit number of iterations when counting active IDs to 65000
+	* src/xen_unified.c: Fix checking of return value for the
+	domainGetVCpus method.
+	* src/xend_internal.c: Added an impl of the DomainGetOSType
+	method which works with inactive domains too. Don't do a
+	redundant ping test against GetVersion, since we now already
+	fetch config file format number which serves as a ping test.
+	Allow the kernel SEXPR field to be missing for domain0, or if
+	using a bootloader. Mark interface as type=bridge, if there
+	is a bridge device listed, but no explicit script to fix inactive
+	domains. Allow multiple boot devices to be provided for HVM
+	* src/xml.c: Allow multiple boot devices to be provided for HVM.
+	Support new style graphics config for HVM in xen 3.0.5
+	* src/xs_internal.c: Don't hardcode domain type of 'linux',
+	since we now have a fallback driver with xend that can make
+	the correct diagnosis for inactive domains.
+
 Thu Apr 12 15:18:00 BST 2007 Richard Jones <rjones@redhat.com>
 
 	* src/libvirt.c: set VIR_CONNECT_RO on read-only connections.
