--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Mon Apr 16 09:11:04 EST 2007 Daniel P. Berrange <berrange@redhat.com>
+
+	* qemud/conf.c: Check for existance of QEMU binary path. Fix check
+	for -no-kqemu flag to work with x86_64 on i386
+
 Mon Apr 16 09:09:04 EST 2007 Daniel P. Berrange <berrange@redhat.com>
 
 	* src/qemu_internal.c: Implement virDomainGetOSType driver method
