--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Thu Apr 19 09:55:28 CEST 2007 Daniel Veillard <veillard@redhat.com>
+
+	* libvir.rng: applied patch to fix regexp constructs from Robin Green
+
 Wed Apr 18 16:16:00 BST 2007 Richard W.M. Jones  <rjones@redhat.com>
 
 	* docs/libvir.html: Documentation for the remote patch.
