--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Wed May  2 11:50:35 EST 2007 Daniel P. Berrange <berrange@redhat.com>
+
+	* qemud/qemud.c: Use --strict-order when running dnsmasq
+
 Mon Apr 30 18:33:00 BST 2007 Richard W.M. Jones <rjones@redhat.com>
 
 	* src/libvirt.c, src/driver.h, src/proxy_internal.c,
