--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Thu May  3 18:00:41 CEST 2007 Daiel Veillard <veillard@redhat.com>
+
+	* src/virsh.c: fix help for dumpxml and net-dumpxml commands
+	  based on Chris Wright feedback
+
 Thu May  3 15:03:00 BST 2007 Richard Jones <rjones@redhat.com>
 
 	* src/virterror.c, include/libvirt/virterror.h: Added
