Ignore old style vnc config on xen 3.0.5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Thu May 11 10:20:00 EST 2007 Daniel P. Berrange <berrange@redhat.com>
+
+	* src/xend_internal.c: Ignore old style VNC config for HVM
+	guests on Xen 3.0.5 or later
+
 Thu May 11 09:34:00 EST 2007 Daniel P. Berrange <berrange@redhat.com>
 
 	* libvirt.spec.in: Added dep on dnsmasq
